[gd_scene load_steps=5 format=3 uid="uid://cli6ih4qdul74"]

[ext_resource type="Script" path="res://Tank/Freeze/freeze_weapon.gd" id="1_il4p4"]
[ext_resource type="AudioStream" uid="uid://cmh60084v8vy6" path="res://Tank/Freeze/freeze.mp3" id="2_nq8pn"]
[ext_resource type="Texture2D" uid="uid://bgormwj5kytxy" path="res://Tank/Freeze/snowflake.png" id="3_f8wj5"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d0gt6"]
particle_flag_disable_z = true
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 1.269
radial_velocity_min = -2.23517e-05
radial_velocity_max = 344.09
gravity = Vector3(0, 0, 0)

[node name="FreezeWeapon" type="Node2D"]
script = ExtResource("1_il4p4")

[node name="CoolDown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FreezeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nq8pn")
volume_db = -7.015

[node name="particles" type="GPUParticles2D" parent="."]
modulate = Color(0.584314, 1, 1, 0.513726)
position = Vector2(14, 2)
emitting = false
process_material = SubResource("ParticleProcessMaterial_d0gt6")
texture = ExtResource("3_f8wj5")
trail_enabled = true
trail_lifetime = 1.0

[node name="ParticleTimer" type="Timer" parent="particles"]
wait_time = 1.3
one_shot = true

[connection signal="timeout" from="particles/ParticleTimer" to="." method="_on_particle_timer_timeout"]
